fix tag vertical spacing

--- a/frontend/src/styles/about-me.scss
+++ b/frontend/src/styles/about-me.scss
@@ -34,7 +34,8 @@ div.about-me {
   }
 
   a {
-    margin-right: 20px
+    margin-right: 20px;
+    margin-bottom: 10px;
   }
 
   @media only screen and ( max-height: 400px ){
